<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.language.LanguageActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_language_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear_main_title"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="10dp"
            android:orientation="horizontal">


            <com.hello.youtubeplayer.ui.customview.GradientTextView
                android:id="@+id/tv_main_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/title_language"
                android:textSize="18sp"
                app:gradientCenter="@color/text_red_gran_3"
                app:gradientEnd="@color/text_red_gran_2"
                app:gradientStart="@color/text_red_gran_1" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/rl_lang_eng"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toBottomOf="@+id/card_language_title">

        <ImageView
            android:id="@+id/img_language_choose1"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_forward" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/img_language_choose1"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/language_eng"
            android:textColor="@android:color/black" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_lang_vie"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toBottomOf="@+id/rl_lang_eng">

        <ImageView
            android:id="@+id/img_language_choose2"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_forward" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/img_language_choose2"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/language_vie"
            android:textColor="@android:color/black" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_lang_jan"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toBottomOf="@+id/rl_lang_vie">

        <ImageView
            android:id="@+id/img_language_choose3"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_forward" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/img_language_choose3"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/language_jan"
            android:textColor="@android:color/black" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>