<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:padding="20dp"
        tools:context=".ui.setting.SettingFragment">

        <RelativeLayout
            android:id="@+id/relative_setting_language"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_setting_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_language" />

            <TextView
                android:id="@+id/text_setting_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/image_setting_language"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/setting_languages"
                android:textColor="@android:color/black" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_arrow_right_24" />

        </RelativeLayout>

        <RelativeLayout
            android:clickable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:id="@+id/relative_setting_playBackground"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_below="@+id/relative_setting_language"
            android:layout_marginTop="36dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/relative_setting_language">

            <ImageView
                android:id="@+id/image_setting_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_play_background" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/image_setting_play"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/setting_play_background"
                android:textColor="@android:color/black" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_go" />

        </RelativeLayout>

        <RelativeLayout
            android:clickable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:id="@+id/relative_setting_notification"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_below="@+id/relative_setting_playBackground"
            android:layout_marginTop="36dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/relative_setting_playBackground">

            <ImageView
                android:id="@+id/image_setting_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_notification" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/image_setting_notification"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/setting_get_noti"
                android:textColor="@android:color/black" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_go" />

        </RelativeLayout>


        <RelativeLayout
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:id="@+id/relative_setting_policy"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_below="@+id/relative_setting_notification"
            android:layout_marginTop="36dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/relative_setting_notification">

            <ImageView
                android:id="@+id/image_setting_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_policy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/image_setting_policy"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/setting_policy"
                android:textColor="@android:color/black" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_go" />

        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
